# smart-media-analyzer

./: .gitignore  README.md  main.py  media_ai_project_roadmap.md  pyproject.toml  scene_detection_test.py  test_video_processing.py
VideoProcessor/: scene_detector.py  utils.py  video_analyzer.py
database/: __init__.py  media_db.py  queries.py  schemas.py  utils.py
notebooks/: 01_video_processing_exploration.ipynb  giant_oarfish_keyframes.json
