[project]
name = "smart-media-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "scenedetect[opencv]>=0.6.6",
    "matplotlib>=3.7.0",
    "open-clip-torch>=2.32.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
